feat: add intention history list
